--- a/UnityProject/Assets/Plugins/Zenject/zenject.asmdef
+++ b/UnityProject/Assets/Plugins/Zenject/zenject.asmdef
@@ -1,3 +1,16 @@
 ﻿{
-	"name": "Zenject"
+	"name": "Zenject",
+	"rootNamespace": "Zenject",
+	"references": [
+		"UniTask"
+	],
+	"includePlatforms": [],
+	"excludePlatforms": [],
+	"allowUnsafeCode": false,
+	"overrideReferences": false,
+	"precompiledReferences": [],
+	"autoReferenced": true,
+	"defineConstraints": [],
+	"versionDefines": [],
+	"noEngineReferences": false
 }
